external-dns/repo_ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aiqua-slim
  name: dev-test-nginx
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
    - host: dev-test-server.stg-sg0.qgraph-vpc.io
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
